--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -32,17 +32,17 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         html, body{
             margin: 0;
             height: 100%;
-            animation: fadein 2s;
-            -moz-animation: fadein 2s; /* Firefox */
-            -webkit-animation: fadein 2s; /* Safari and Chrome */
-            -o-animation: fadein 2s; /* Opera */
-            background-color: var(--grey);+-+
-            color: var(--white);
-            background-color: var(--bg);
-            color: var(--txt);
-            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-            background-size: 400% 400%;
-            animation: gradient 15s ease infinite;
+/*             animation: fadein 2s; */
+/*             -moz-animation: fadein 2s;  *//* Firefox */
+/*             -webkit-animation: fadein 2s;  *//* Safari and Chrome */
+/*             -o-animation: fadein 2s;  *//* Opera */
+/*             background-color: var(--grey);+-+ */
+/*             color: var(--white); */
+/*             background-color: var(--bg); */
+/*             color: var(--txt); */
+/*             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+/*             background-size: 400% 400%; */
+/*             animation: gradient 15s ease infinite; */
   }
 
   @keyframes gradient {
