started making changes-added menus, tweaked colors, organized folders

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -13,8 +13,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <a class="nav-link" href="/mainabout">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/grid">Mini Labs</a>
+                <a class="nav-link" href="/mainabout">About Us<span class="sr-only">(current)</span></a>
+                </div>
+            <li class="nav-item dropdown">
+                <a class="nav-link" href="/mainabout">Project Green<span class="sr-only">(current)</span></a>
                 </div>
             </li>
         </ul>
