--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -8,12 +8,12 @@
     <title>About Us</title>
 </head>
 {% block body %}
-<div class="container-fluid" style="background-image: url('../static/nathan1.jpg'); height: available; width: 100%; background-repeat: no-repeat; background-attachment: fixed">
+<div class="container-fluid" style="background-image: url('../static/assests/nathan1.jpg'); height: available; width: 100%; background-repeat: no-repeat; background-attachment: fixed">
     <style>
         /* Parent Container */
 
         .aboutUsImage{
-            background: url('../static/nathan.png') no-repeat;
+            background: url('../static/assests/nathan.png') no-repeat;
             cursor:pointer;
             width: 232px;
             height: 309px;
