--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,8 +9,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
 {% set basename = "Milkshake" %}
 {% set github = "https://github.com/nighthawkcoders" %}
-{% set twitter = "https://twitter.com/NighthawkCoding" %}
-{% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+
 
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,7 +18,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         :root{
             --white: whitesmoke;
             --black: black;
-            --grey: grey;
+            --grey: #3c3f41;
         }
 
         html, body{
@@ -29,7 +28,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: var(--grey);
+            background-color: var(--blue);
             color: var(--white);
         }
 
@@ -121,11 +120,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         <div class="row" style="padding-left: 10%;">
             {% block links %}
             <div class="col-3">
-                <a href="{{ overview }}" class="btn">Overview</a>
+
             </div>
 
             <div class="col-3">
-                <a href="{{ repo }}" class="btn">Repository</a>
+
             </div>
             {% endblock %}
         </div>
