Dropdown/About Me

--- a/templates/LucasAboutMe.html
+++ b/templates/LucasAboutMe.html
@@ -24,7 +24,7 @@
     <!-- Photo Grid -->
     <div class="w3-row">
         <div class="w3-half">
-            <img src="/w3images/streetart.jpg" style="width:100%">
+            <img src="/static/assets/IMG_0585.jpg" style="width:100%">
             <img src="/w3images/streetart2.jpg" style="width:100%">
             <img src="/w3images/streetart5.jpg" style="width:100%">
         </div>
@@ -41,14 +41,16 @@
 <!-- Footer / About Section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
     <h2>About Me</h2>
-    <img src="/w3images/boy.jpg" class="w3-image w3-padding-32" width="300" height="300">
+    <img src="/static/assets/IMG_5304.JPG" class="w3-image w3-padding-32" width="300" height="300">
     <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
+        <p> (I am the left middle one)</p>
+        <div>
         <p>Hi, welcome to my About Me page! My name is Lucas Huang, I am 17, and am a junior here at Del Norte Highschool. I am apart of Del Norte's NHS, Trail Note, Hack Club, and Team Pokeman. I love to play basketball and video games, and spend time hanging out with my friends and family.  </p>
         <p class="w3-large w3-text-pink">My contact information:</p>
         <div class="w3-section">
             <label><b>Email:</b></label>
             ljxover248@gmil.com
-            <br>
+        </div>
 </footer>
 </body>
 </html>
