--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -7,7 +7,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelifixvr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -21,6 +21,18 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('pokemon_cards') }}>Pokemon Cards</a>
             <a class="nav-link" href={{ url_for('sports_cards') }}>Sports Cards</a>
             <a class="nav-link" href={{ url_for('funko_pop') }}>Funko Pops</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" id="dropdownMenuButton1" type="button">About Us</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <a class="dropdown-item" href="/LucasAboutMe/">About Lucas</a>
+                    <a class="dropdown-item" href="/KianAboutMe/">About Kian</a>
+                    <a class="dropdown-item" href="/IanAboutMe/">About Ian</a>
+                    <a class="dropdown-item" href="/GavinAboutMe/">About Gavin</a>
+                </div>
+            </li>
         </div>
+
+
     </div>
 </nav>
