--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,7 +16,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <a class="nav-link" href="/mainabout">About Us<span class="sr-only">(current)</span></a>
                 </div>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="/mainabout">Project Green<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/mainabout">Give us feedback!<span class="sr-only">(current)</span></a>
                 </div>
             </li>
         </ul>
