fixed background and font size

--- a/templates/divya.html
+++ b/templates/divya.html
@@ -18,7 +18,26 @@
             src="https://docs.google.com/document/d/1v4dmPa2CQaX8GSf0YmcSUG9yk1GqDXRRTICu1DzH1yA/edit?usp=sharing"
     ></iframe>
 </p>
+<button onclick="MaskOnOff()" class="center">Mask On/Off</button>
+<style>
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+</p>
+<img id="MaskOn" src=".." style="max-height: 500px;" class="center">
+<style>
+    .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+</div>
     </div>
+
 {% endblock %}
 <!- This is turning off birds background from base.html -->
 {% block background %}
