--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,34 @@
 <!-- Extending the project layout, as this file will do minor customizations -->
 {% extends "layouts/base.html" %}
 
-<!-- Setting up variables to customize "project" details to be specific to index page -->
-{% set project = "Portfolio" %}
+<!-- Setting up variables to customize "project" details to be specific to kangaroos -->
+
+
+
+
+{% block body %}
+<h1 id=mainheader> Expeditions </h1>
+
+
+
+
+</div>
+{% block background %}
+
+<style>
+
+    body {
+        background: #d2b48c;
+    url('https://fonts.googleapis.com/css?family=Roboto:700');
+        align-self: center;
+
+        font-family: "Times New Roman";
+    }
+
+
+</style>
+{% endblock %}
+
+{% endblock %}
+
+
