--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -8,7 +8,7 @@
     <title>About Us</title>
 </head>
 {% block body %}
-<div class="container-fluid" style="background-image: url('../static/nathan1.jpg'); height: available; width: 100%; background-repeat: no-repeat; background-attachment: fixed">
+<div class="container-fluid" style="background-image: url('../static/assets/nathan1.jpg'); height: available; width: 100%; background-repeat: no-repeat; background-attachment: fixed">
     <style>
         .aboutUsImage{
             cursor:pointer;
@@ -18,27 +18,27 @@
             margin:auto;
         }
         .nathan{
-            background: url('../static/nathan.png') no-repeat;
+            background: url('../static/assets/nathan.png') no-repeat;
             width: 232px;
             height: 309px;
         }
         .reem{
-            background: url('../static/nathan.png') no-repeat;
+            background: url('../static/assets/nathan.png') no-repeat;
             width: 232px;
             height: 309px;
         }
         .daniel{
-            background: url('../static/daniel.png') no-repeat;
+            background: url('../static/assets/daniel.png') no-repeat;
             width: 232px;
             height: 309px;
         }
         .jacob{
-            background: url('../static/jacob.png') no-repeat;
+            background: url('../static/assets/jacob.png') no-repeat;
             width: 232px;
             height: 309px;
         }
         .james{
-            background: url('../static/james.png') no-repeat;
+            background: url('../static/assets/james.png') no-repeat;
             width: 232px;
             height: 309px;
         }
