--- a/templates/khushi.html
+++ b/templates/khushi.html
@@ -9,7 +9,8 @@
 
 
 <title>Greet Khushi</title>
-<body style="background-color: #EBF7FA;">
+<body style="background-color: #EBF7FA; text-align:center">
+
 <style>
    .button1 {
        background-color: white;
@@ -26,7 +27,8 @@
    }
 </style>
 
-<img id="myImage" onclick="changeImage()" src="/static/assets/khushi2.jpg" width="250" height="250">
+<div style="margin: 2% 5% 5%; text-align:center; font-family: Baskerville; font-size: larger">
+    </div>
 
 <p>Hello <span id="myName">{{name}}</span>, Greetings!</p>
 
@@ -37,19 +39,20 @@
 </form>
 
 <br>
-<p>
-    <img src="/static/assets/khushiimages/Khushi.jpg" style="height: 400px; width: 350px;" id="imgClickAndChange" onclick="changeImage()"/>
+<p> <!-- Reference from Linda -->
+    <img src="/static/assets/khushiimages/Khushi2.jpg" style="height: 400px; width: auto;" id="imgClickAndChange2"/>
+    <img src="/static/assets/khushiimages/Khushi.jpg" style="height: 400px; width: auto;" id="imgClickAndChange" onclick="changeImage()"/>
 </p>
 <p style="font-size: large; font-family: Baskerville; text-align: center"><i>Click Me</i></p>
-<script>
+
+<script> //reference from Shreya and Sonakshi
    function changeImage() {
-
-       if (document.getElementById("imgClickAndChange").src ="/static/assets/khushiimages/Khushi.jpg")
-       {
-           document.getElementById("imgClickAndChange").src = "/static/assets/khushiimages/khushi2.jpg";
+       if (document.getElementById("imgClickAndChange").src ="/static/assets/khushiimages/Khushi.jpg") {
+           document.getElementById("imgClickAndChange2").src = "/static/assets/khushiimages/Khushi2.jpg";
+       } else {
+          document.getElementById("imgClickAndChange").src = "/static/assets/khushiimages/Khushi.jpg";
        }
-
-   }
+            }
 </script>
 </div>
 </body>
