--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -152,7 +152,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         A:link {text-decoration:none;color:#000}
         A:visited {text-decoration:none;color:#000}
         A:active {text-decoration:none;color:#000}
-        A:hover {text-decoration:none;color:#fed2b9}
+        A:hover {text-decoration:none;color:#fed2b9;font-weight: 500;}
 
     </style>
 
