started to extend dark mode to the rest of the page

--- a/templates/about_us/darktest.html
+++ b/templates/about_us/darktest.html
@@ -3,7 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>dark test</title>
-    <link rel="stylesheet" href="templates/layouts/dark.scss" />
+    <!-- Putting the slash stops if from looking for it from darktest-->
+
+    <style>
+        html {
+            height:100%;
+            display: grid;
+            text-align: center;
+            align-items: center;
+            justify-items: center;
+            --bg: #8E6F64;
+            --bg-panel: #E1CFC9;
+            --color-headings:#000000;
+            --color-text:#000000;
+        }
+
+        html[data-theme='dark'] {
+            --bg: #16100F;
+            --bg-panel: #291F1C;
+            --color-headings:#373332;
+            --color-text:#373332;
+        }
+
+        body {
+            background-color: var(--bg);
+
+        }
+
+        .container {
+            background-color: var(--bg-panel);
+            margin: 5em;
+            padding: 5em;
+            border-radius: 15px;
+
+            display: grid;
+            grid-template-columns: 80% auto;
+            grid-template-rows: auto auto;
+            grid-template-areas:
+    "title switch"
+    "content content";
+        h1 {
+            margin: 0;
+            color: var(--color-headings);
+        }
+
+        p{
+            color: var(--color-text);
+            grid-area: content;
+            font-size: 1.1em;
+            line-height: 1.8em;
+            margin-top: 2em;
+        }
+
+        /* fancy toggle code doesn't seem neccesary but it's still in dark.scss */
+        /* toggle code from https://codepen.io/mburnette/pen/LxNxNg */
+
+    </style>
+
+
 </head>
 <body>
 
