--- a/templates/colin.html
+++ b/templates/colin.html
@@ -33,7 +33,7 @@
                     </div>
                 </td>
                 <td>
-                    <p style="text-align:center" class="fs-2">
+                    <p style="text-align:center; background-image:url("pastelBackground.jpg")" class="fs-2">
                         My name is Colin Howard, and I'm a junior in Ms. Naidu's CSP period 5. I don't have any experience
                         in computer science or coding of any time, so learning new things in this class is lots of fun.
                         Sometimes it's hard to keep up, but thankfully, Google almost always has the answers to my questions.
@@ -74,5 +74,6 @@
         .src="/static/assets/colinNoMask.jpg";
     }
 </script>
+
 {% endblock %}
 </html>
