--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -28,16 +28,20 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
     <style>
         html{
-            --txt: black;
+            --txt: #000000;
             --black: #ceb680;
             --bg: #8e6f64;
             --button: #fed2b9;
             --buttonhover: #64483f;
+            --logocolor: white;
+            --catdrop: #000000;
         }
 
         html[data-theme='dark'] {
-            --bg: #16100F;
+            --bg: #291F1C;
             --txt:#373332;
+            --logocolor:black;
+            --catdrop: #373332;
 
             /*need to figure out what this is and make a dark version */
             --button: #fed2b9;
@@ -72,12 +76,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
 
-
-        .dark-mode {
-            background-color: var(--white);
-            color: var(--black);
-        }
-
         h1{
             font-size: 5em;
         }
@@ -86,11 +84,12 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             color: midnightblue;
         }
 
+        /* This is for the socials' logos */
         .fa{
             font-size: 3em;
             letter-spacing: 1em;
             transition: all .2s;
-            color: white;
+            color: var(--logocolor);
         }
 
         .fa:hover{
@@ -106,7 +105,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
         .fa-github:hover{
-            color: #000000;
+            color: var(--catdrop);
         }
 
         .btn,
