search database works

--- a/crud/templates/crud/search.html
+++ b/crud/templates/crud/search.html
@@ -1,7 +1,7 @@
 <!-- Preparing search using asynchronous "fetch" (no page reload, no wait)
 inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 -->
-{% extends "layout/base.html" %}
+{% extends "layouts/base.html" %}
 
 
 
