--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -176,7 +176,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         <br>
         <a href="/stats">AP Statistics</a>
     </div>
-
+    {% block meta %}
+    {% endblock %}
 </head>
 
 <body>
